menu structure and styles, removed js regarding desktop menu

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -22,21 +22,23 @@
         "blocks": {},
         "block_order": [],
         "settings": {
-          "color_palette": "two",
+          "color_palette": "one",
           "custom_title": "{{ shop.name }}",
-          "logo": "booqable://assets/image-tough-store-logo-white.png",
+          "login_placeholder": "Log in",
+          "logo": "booqable://assets/image-store-logo.png",
           "menu": "main-menu",
-          "menu_opener_mobile": "left",
-          "menu_style": "horizontal",
-          "menu_position": "left-center",
-          "menu_position_mobile": "top",
+          "menu_opener_label": "Menu",
+          "menu_opener_mobile": "right",
           "padding_top": "medium",
           "padding_top_mobile": "medium",
           "padding_bottom": "small",
           "padding_bottom_mobile": "medium",
           "search_placeholder": "Search",
+          "signup_placeholder": "Create account",
+          "show_picker": true,
           "show_search": true,
-          "sticky_header": true
+          "sticky_header": true,
+          "transparent_bg": true
         },
         "disabled": null
       },
@@ -130,21 +132,23 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "color_palette": "two",
+            "color_palette": "one",
             "custom_title": "{{ shop.name }}",
-            "logo": "booqable://assets/image-tough-store-logo-white.png",
+            "login_placeholder": "Log in",
+            "logo": "booqable://assets/image-store-logo.png",
             "menu": "main-menu",
-            "menu_opener_mobile": "left",
-            "menu_style": "horizontal",
-            "menu_position": "left-center",
-            "menu_position_mobile": "top",
+            "menu_opener_label": "Menu",
+            "menu_opener_mobile": "right",
             "padding_top": "medium",
             "padding_top_mobile": "medium",
             "padding_bottom": "small",
             "padding_bottom_mobile": "medium",
             "search_placeholder": "Search",
+            "signup_placeholder": "Create account",
+            "show_picker": true,
             "show_search": true,
-            "sticky_header": true
+            "sticky_header": true,
+            "transparent_bg": true
           },
           "disabled": null
         },
