Add search.js, styles, fix some bugs

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -24,18 +24,22 @@
         "settings": {
           "color_palette": "one",
           "custom_title": "{{ shop.name }}",
+          "follow_us": "Follow us",
           "login_placeholder": "Log in",
+          "logout_placeholder": "Log out",
           "logo": "booqable://assets/image-store-logo.png",
           "menu": "main-menu",
           "menu_opener_label": "Menu",
           "menu_opener_mobile": "right",
           "padding_top": "medium",
           "padding_top_mobile": "medium",
-          "padding_bottom": "small",
+          "padding_bottom": "medium",
           "padding_bottom_mobile": "medium",
-          "search_placeholder": "Search",
+          "search_placeholder": "Where are you looking for?",
           "signup_placeholder": "Create account",
-          "show_picker": true,
+          "show_datepicker": false,
+          "show_payments": false,
+          "show_payments_mobile": true,
           "show_search": true,
           "sticky_header": true,
           "transparent_bg": true
