Added logo for Header is transparent-backgrounded

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -28,6 +28,7 @@
           "login_placeholder": "",
           "logout_placeholder": "",
           "logo": "booqable://assets/image-store-logo.png",
+          "logo_transparent": "booqable://assets/image-store-logo-white.png",
           "menu": "main-menu",
           "menu_opener_label": "Menu",
           "menu_opener_mobile": "right",
@@ -142,6 +143,7 @@
             "login_placeholder": "",
             "logout_placeholder": "",
             "logo": "booqable://assets/image-store-logo.png",
+            "logo_transparent": "booqable://assets/image-store-logo-white.png",
             "menu": "main-menu",
             "menu_opener_label": "Menu",
             "menu_opener_mobile": "right",
