--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -76,6 +76,7 @@
           "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
           "color_scheme": "set-3",
           "icon": "phone",
+          "icon_style": "outline",
           "padding_top": "medium",
           "padding_top_mobile": "medium",
           "padding_bottom": "medium",
