--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -195,23 +195,23 @@
         "set-1": {
           "type": "color_scheme",
           "settings": {
-            "background_accent": "#53C787",
+            "background_accent": "#8CA4FA",
             "background": "#FFFFFF",
-            "color_accent": "#1A3333",
-            "color_accent_outline": "#53C787",
-            "color_primary": "#1A3333",
-            "color_secondary": "#768585"
+            "color_accent": "#0B0E15",
+            "color_accent_outline": "#8CA4FA",
+            "color_primary": "#0B0E15",
+            "color_secondary": "#9F9E9E"
           }
         },
         "set-2": {
           "type": "color_scheme",
           "settings": {
             "background_accent": "#FFFFFF",
-            "background": "#53C787",
-            "color_accent": "#1A3333",
+            "background": "#8CA4FA",
+            "color_accent": "#0B0E15",
             "color_accent_outline": "#FFFFFF",
-            "color_primary": "#1A3333",
-            "color_secondary": "#2A5044"
+            "color_primary": "#0B0E15",
+            "color_secondary": "#5A5C6A"
           }
         },
         "set-3": {
@@ -219,8 +219,8 @@
           "settings": {
             "background_accent": "#F6F4F2",
             "background": "#E06B48",
-            "color_accent": "#1A3333",
-            "color_accent_outline": "#1A3333",
+            "color_accent": "#0B0E15",
+            "color_accent_outline": "#0B0E15",
             "color_primary": "#F6F4F2",
             "color_secondary": "#E0D4CE"
           }
@@ -228,23 +228,23 @@
         "set-4": {
           "type": "color_scheme",
           "settings": {
-            "background_accent": "#53C787",
-            "background": "#1A3333",
-            "color_accent": "#1A3333",
-            "color_accent_outline": "#53C787",
-            "color_primary": "#F6F4F2",
+            "background_accent": "#8CA4FA",
+            "background": "#0B0E15",
+            "color_accent": "#0B0E15",
+            "color_accent_outline": "#B3C0EE",
+            "color_primary": "#FFFFFF",
             "color_secondary": "#A0A6A6"
           }
         },
         "set-5": {
           "type": "color_scheme",
           "settings": {
-            "background_accent": "#53C787",
-            "background": "#F6F4F2",
-            "color_accent": "#1A3333",
-            "color_accent_outline": "#53C787",
-            "color_primary": "#1A3333",
-            "color_secondary": "#768585"
+            "background_accent": "#8CA4FA",
+            "background": "#F4F6FC",
+            "color_accent": "#0B0E15",
+            "color_accent_outline": "#8CA4FA",
+            "color_primary": "#0B0E15",
+            "color_secondary": "#AEB3BA"
           }
         }
       },
