Changed color_set 5's secondary_color of Campervan variation

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -244,7 +244,7 @@
             "color_accent": "#0B0E15",
             "color_accent_outline": "#8CA4FA",
             "color_primary": "#0B0E15",
-            "color_secondary": "#AEB3BA"
+            "color_secondary": "#85888c"
           }
         }
       },
