Updated logo quality and size, added close the Sesarch and Menu with a "click outside", fixed typos and displaying Cart and Search buttons on mobile, fixed some styles, cleaned up the code

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -103,7 +103,7 @@
             "padding_top_mobile": "medium",
             "padding_bottom": "medium",
             "padding_bottom_mobile": "medium",
-            "search_placeholder": "Where are you looking for?",
+            "search_placeholder": "What are you looking for?",
             "show_datepicker": true,
             "show_payments": false,
             "show_payments_mobile": true,
@@ -466,7 +466,7 @@
             "padding_top_mobile": "medium",
             "padding_bottom": "medium",
             "padding_bottom_mobile": "medium",
-            "search_placeholder": "Where are you looking for?",
+            "search_placeholder": "What are you looking for?",
             "show_datepicker": true,
             "show_payments": false,
             "show_payments_mobile": true,
@@ -838,7 +838,7 @@
             "padding_top_mobile": "medium",
             "padding_bottom": "medium",
             "padding_bottom_mobile": "medium",
-            "search_placeholder": "Where are you looking for?",
+            "search_placeholder": "What are you looking for?",
             "show_datepicker": true,
             "show_payments": false,
             "show_payments_mobile": true,
