--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -74,7 +74,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Free shipping from €50",
+            "bar_message": "Get 15% off with code BIKE at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-3",
             "icon": "phone",
@@ -260,7 +260,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Free shipping from €50",
+            "bar_message": "Get 15% off with code BUGGY at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-4",
             "icon": "phone",
@@ -437,7 +437,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Free shipping from €50",
+            "bar_message": "Get 15% off with code CAMPERVAN at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-3",
             "icon": "phone",
@@ -623,7 +623,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Free shipping from €50",
+            "bar_message": "Get 15% off with code CAMPING at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-3",
             "icon": "phone",
@@ -809,7 +809,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Free shipping from €50",
+            "bar_message": "Get 15% off with code HIKING at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-3",
             "icon": "phone",
