--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -990,7 +990,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Get 15% off with code PURE at checkout",
+            "bar_message": "Get 15% off with code <b>PURE</b> at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-3",
             "icon": "phone",
