--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -250,9 +250,9 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Get 15% off with code ADVENTURE at checkout",
+            "bar_message": "Get 15% off with code <b>ADVENTURE</b> at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
-            "color_scheme": "set-3",
+            "color_scheme": "set-4",
             "icon": "phone",
             "icon_style": "outline",
             "padding_top": "medium",
