--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -805,7 +805,7 @@
           "blocks": {},
           "block_order": [],
           "settings": {
-            "bar_message": "Get 15% off with code FLOW at checkout",
+            "bar_message": "Get 15% off with code <b>FLOW</b> at checkout",
             "bar_text": "Call Us 24/7 <a href=\"+1 555 302 8549\">+1 555 302 8549</a>",
             "color_scheme": "set-5",
             "icon": "phone",
