--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -118,41 +118,35 @@
             "menu_712555": {
               "type": "menu",
               "settings": {
-                "heading": "COLUMN ONE",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_712556": {
               "type": "menu",
               "settings": {
-                "heading": "COLUMN TWO",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_712557": {
               "type": "menu",
               "settings": {
-                "heading": "COLUMN THREE",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
-            },
-            "menu_712558": {
-              "type": "menu",
-              "settings": {
-                "heading": "COLUMN FOUR",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
             "menu_712555",
             "menu_712556",
-            "menu_712557",
-            "menu_712558"
+            "menu_712557"
           ],
           "settings": {
             "bottom_menu": "bottom-menu",
@@ -160,12 +154,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": false,
-            "rounded_corners": "large",
             "logo": "booqable://assets/image-store-logo-white.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "large"
           },
           "disabled": null
         }
@@ -294,50 +288,35 @@
             "menu_714955": {
               "type": "menu",
               "settings": {
-                "heading": "Column One",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_714956": {
               "type": "menu",
               "settings": {
-                "heading": "Column Two",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_714957": {
               "type": "menu",
               "settings": {
-                "heading": "Column Three",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
-            },
-            "menu_714958": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Four",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
-            "menu_714959": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Five",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
             "menu_714955",
             "menu_714956",
-            "menu_714957",
-            "menu_714958",
-            "menu_714959"
+            "menu_714957"
           ],
           "settings": {
             "bottom_menu": "bottom-menu",
@@ -345,12 +324,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": true,
-            "rounded_corners": "none",
             "logo": "booqable://assets/image-store-logo.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
           },
           "disabled": null
         }
@@ -989,50 +968,35 @@
         "footer": {
           "type": "footer",
           "blocks": {
-            "menu": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column One",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
-            "menu_789456": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Two",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
             "menu_789457": {
               "type": "menu",
               "settings": {
-                "heading": "Column Three",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789458": {
               "type": "menu",
               "settings": {
-                "heading": "Column Four",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789459": {
               "type": "menu",
               "settings": {
-                "heading": "Column Five",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
-            "menu",
-            "menu_789456",
             "menu_789457",
             "menu_789458",
             "menu_789459"
@@ -1043,12 +1007,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": true,
-            "rounded_corners": "none",
             "logo": "booqable://assets/image-store-logo-white.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
           },
           "disabled": null
         }
@@ -1345,50 +1309,35 @@
         "footer": {
           "type": "footer",
           "blocks": {
-            "menu": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column One",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
-            "menu_789456": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Two",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
             "menu_789457": {
               "type": "menu",
               "settings": {
-                "heading": "Column Three",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789458": {
               "type": "menu",
               "settings": {
-                "heading": "Column Four",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789459": {
               "type": "menu",
               "settings": {
-                "heading": "Column Five",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
-            "menu",
-            "menu_789456",
             "menu_789457",
             "menu_789458",
             "menu_789459"
@@ -1399,12 +1348,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": true,
-            "rounded_corners": "none",
             "logo": "booqable://assets/image-store-logo-white.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
           },
           "disabled": null
         }
@@ -1530,50 +1479,35 @@
         "footer": {
           "type": "footer",
           "blocks": {
-            "menu": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column One",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
-            "menu_789456": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Two",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
             "menu_789457": {
               "type": "menu",
               "settings": {
-                "heading": "Column Three",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789458": {
               "type": "menu",
               "settings": {
-                "heading": "Column Four",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789459": {
               "type": "menu",
               "settings": {
-                "heading": "Column Five",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
-            "menu",
-            "menu_789456",
             "menu_789457",
             "menu_789458",
             "menu_789459"
@@ -1584,12 +1518,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": true,
-            "rounded_corners": "none",
             "logo": "booqable://assets/image-store-logo-white.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
           },
           "disabled": null
         }
@@ -2399,50 +2333,35 @@
         "footer": {
           "type": "footer",
           "blocks": {
-            "menu": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column One",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
-            "menu_789456": {
-              "type": "menu",
-              "settings": {
-                "heading": "Column Two",
-                "menu": "column-1",
-                "menu_align": "left"
-              }
-            },
             "menu_789457": {
               "type": "menu",
               "settings": {
-                "heading": "Column Three",
-                "menu": "column-1",
+                "heading": "Quick links",
+                "menu": "main-menu",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789458": {
               "type": "menu",
               "settings": {
-                "heading": "Column Four",
-                "menu": "column-1",
+                "heading": "Colections",
+                "menu": "collections",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             },
             "menu_789459": {
               "type": "menu",
               "settings": {
-                "heading": "Column Five",
-                "menu": "column-1",
+                "heading": "Products",
+                "menu": "products",
                 "menu_align": "left"
-              }
+              },
+              "disabled": null
             }
           },
           "block_order": [
-            "menu",
-            "menu_789456",
             "menu_789457",
             "menu_789458",
             "menu_789459"
@@ -2453,12 +2372,12 @@
             "color_scheme": "set-4",
             "custom_title": "{{ shop.name }}",
             "full_width": true,
-            "rounded_corners": "none",
             "logo": "booqable://assets/image-store-logo-white.png",
             "padding_bottom": "small",
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
-            "padding_top_mobile": "small"
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
           },
           "disabled": null
         }
@@ -2982,176 +2901,5 @@
       "tagline_size": 20,
       "use_focal_images": true
     }
-  },
-  "current": {
-    "animation_duration": 0.2,
-    "body_font": "poppins",
-    "color_schemes": {
-      "set-1": {
-        "type": "color_scheme",
-        "settings": {
-          "background_accent": "#EA6112",
-          "background": "#FFFFFF",
-          "color_accent": "#FFFFFF",
-          "color_accent_outline": "#EA6112",
-          "color_primary": "#0B0E15",
-          "color_secondary": "#EA6112"
-        }
-      },
-      "set-2": {
-        "type": "color_scheme",
-        "settings": {
-          "background_accent": "#FFFFFF",
-          "background": "#F6F6F6",
-          "color_accent": "#0B0E15",
-          "color_accent_outline": "#EA6112",
-          "color_primary": "#0B0E15",
-          "color_secondary": "#5A5C6A"
-        }
-      },
-      "set-3": {
-        "type": "color_scheme",
-        "settings": {
-          "background_accent": "#F6F4F2",
-          "background": "#E06B48",
-          "color_accent": "#0B0E15",
-          "color_accent_outline": "#0B0E15",
-          "color_primary": "#F6F4F2",
-          "color_secondary": "#E0D4CE"
-        }
-      },
-      "set-4": {
-        "type": "color_scheme",
-        "settings": {
-          "background_accent": "#EA6112",
-          "background": "#0B0E15",
-          "color_accent": "#FFFFFF",
-          "color_accent_outline": "#EA6112",
-          "color_primary": "#FFFFFF",
-          "color_secondary": "#A0A6A6"
-        }
-      },
-      "set-5": {
-        "type": "color_scheme",
-        "settings": {
-          "background_accent": "#EA6112",
-          "background": "#F6F6F6",
-          "color_accent": "#FFFFFF",
-          "color_accent_outline": "#EA6112",
-          "color_primary": "#0B0E15",
-          "color_secondary": "#85888c"
-        }
-      }
-    },
-    "corner_radius": "fully_round",
-    "h1_size": 56,
-    "h2_size": 48,
-    "h3_size": 40,
-    "heading_font": "poppins",
-    "image_placeholder": "booqable://assets/image-placeholder.png",
-    "large_text_size": 18,
-    "regular_text_size": 16,
-    "sections": {
-      "top-bar": {
-        "type": "top-bar",
-        "blocks": {},
-        "block_order": [],
-        "settings": {
-          "bar_message": "<p>Get 15% off with code <b>PEAK</b><b>&nbsp;</b>at checkout</p>",
-          "bar_text": "<p>Call Us 24/7 <a href=\"tel:+15553028549\">+1 555 302 8549</a></p>",
-          "color_scheme": "set-3",
-          "icon": "phone",
-          "icon_style": "outline",
-          "padding_bottom": "medium",
-          "padding_bottom_mobile": "medium",
-          "padding_top": "medium",
-          "padding_top_mobile": "medium",
-          "show_bar": true
-        },
-        "disabled": null
-      },
-      "header": {
-        "type": "header",
-        "blocks": {},
-        "block_order": [],
-        "settings": {
-          "color_scheme": "set-1",
-          "custom_title": "{{ shop.name }}",
-          "follow_us": "Follow us on",
-          "logo": "booqable://assets/image-store-logo.png",
-          "logo_transparent": "booqable://assets/image-store-logo-white.png",
-          "menu": "main-menu",
-          "menu_opener_label": "Menu",
-          "padding_bottom": "medium",
-          "padding_bottom_mobile": "medium",
-          "padding_top": "medium",
-          "padding_top_mobile": "medium",
-          "search_placeholder": "Where are you looking for?",
-          "show_datepicker": true,
-          "show_payments": false,
-          "show_payments_mobile": true,
-          "show_search": true,
-          "sticky_header": true,
-          "transparent_bg": true
-        },
-        "disabled": null
-      },
-      "footer": {
-        "type": "footer",
-        "blocks": {
-          "menu_700717": {
-            "type": "menu",
-            "settings": {
-              "heading": "Quick links",
-              "menu": "main-menu",
-              "menu_align": "left"
-            },
-            "disabled": null
-          },
-          "menu_700718": {
-            "type": "menu",
-            "settings": {
-              "heading": "Products",
-              "menu": "products",
-              "menu_align": "left"
-            },
-            "disabled": null
-          },
-          "menu_700719": {
-            "type": "menu",
-            "settings": {
-              "heading": "Collections",
-              "menu": "collections",
-              "menu_align": "left"
-            },
-            "disabled": null
-          }
-        },
-        "block_order": [
-          "menu_700717",
-          "menu_700718",
-          "menu_700719"
-        ],
-        "settings": {
-          "bottom_menu": "bottom-menu",
-          "bottom_text": "{{ \"now\" | date: \"%Y\" }} {{ shop.name }}. All right reserved.",
-          "color_scheme": "set-4",
-          "custom_title": "{{ shop.name }}",
-          "full_width": true,
-          "logo": "booqable://assets/image-store-logo-white.png",
-          "padding_bottom": "small",
-          "padding_bottom_mobile": "small",
-          "padding_top": "medium",
-          "padding_top_mobile": "small",
-          "rounded_corners": "none"
-        },
-        "disabled": null
-      }
-    },
-    "social_size": "lg",
-    "social_spacing": "md",
-    "tagline_font": "darker-grotesque",
-    "tagline_size": 20,
-    "use_focal_images": true
   }
 }
