--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -682,6 +682,177 @@
       "tagline_size": 20,
       "use_focal_images": true
     },
+    "capture": {
+      "animation_duration": 0.2,
+      "body_font": "inter",
+      "color_schemes": {
+        "set-1": {
+          "type": "color_scheme",
+          "settings": {
+            "background_accent": "#0851DF",
+            "background": "#FFFFFF",
+            "color_accent": "#FFFFFF",
+            "color_accent_outline": "#0851DF",
+            "color_primary": "#1B1B1B",
+            "color_secondary": "#768585"
+          }
+        },
+        "set-2": {
+          "type": "color_scheme",
+          "settings": {
+            "background_accent": "#0851DF",
+            "background": "#010714",
+            "color_accent": "#FFFFFF",
+            "color_accent_outline": "#0851DF",
+            "color_primary": "#FFFFFF",
+            "color_secondary": "#755B8F"
+          }
+        },
+        "set-3": {
+          "type": "color_scheme",
+          "settings": {
+            "background_accent": "#0851DF",
+            "background": "#0851DF",
+            "color_accent": "#FFFFFF",
+            "color_accent_outline": "#1B1B1B",
+            "color_primary": "#FFFFFF",
+            "color_secondary": "#FFFFFF"
+          }
+        },
+        "set-4": {
+          "type": "color_scheme",
+          "settings": {
+            "background_accent": "#0851DF",
+            "background": "#1B1B1B",
+            "color_accent": "#FFFFFF",
+            "color_accent_outline": "#0851DF",
+            "color_primary": "#FFFFFF",
+            "color_secondary": "#A0A6A6"
+          }
+        },
+        "set-5": {
+          "type": "color_scheme",
+          "settings": {
+            "background_accent": "#1A202C",
+            "background": "#010714",
+            "color_accent": "#FFFFFF",
+            "color_accent_outline": "#FFFFFF",
+            "color_primary": "#FFFFFF",
+            "color_secondary": "#FFFFFF"
+          }
+        }
+      },
+      "corner_radius": "fully_round",
+      "h1_size": 80,
+      "h2_size": 64,
+      "h3_size": 56,
+      "heading_font": "inter",
+      "image_placeholder": "booqable://assets/image-placeholder.jpeg",
+      "large_text_size": 18,
+      "regular_text_size": 16,
+      "sections": {
+        "top-bar": {
+          "type": "top-bar",
+          "blocks": {},
+          "block_order": [],
+          "settings": {
+            "bar_message": "<p>Get 15% off with code <b>CAPTURE</b> at checkout</p>",
+            "bar_text": "<p>Call Us 24/7 <a href=\"tel:+15553028549\">+1 555 302 8549</a></p>",
+            "color_scheme": "set-3",
+            "icon": "phone",
+            "icon_style": "outline",
+            "padding_bottom": "medium",
+            "padding_bottom_mobile": "medium",
+            "padding_top": "medium",
+            "padding_top_mobile": "medium",
+            "show_bar": true
+          },
+          "disabled": null
+        },
+        "header": {
+          "type": "header",
+          "blocks": {},
+          "block_order": [],
+          "settings": {
+            "color_scheme": "set-1",
+            "custom_title": "{{ shop.name }}",
+            "follow_us": "Follow us on",
+            "logo": "booqable://assets/image-store-logo.png",
+            "logo_transparent": "booqable://assets/image-store-logo-white.png",
+            "menu": "main-menu",
+            "menu_opener_label": "Menu",
+            "padding_bottom": "medium",
+            "padding_bottom_mobile": "medium",
+            "padding_top": "medium",
+            "padding_top_mobile": "medium",
+            "search_placeholder": "What are you looking for?",
+            "show_datepicker": true,
+            "show_payments": false,
+            "show_payments_mobile": true,
+            "show_search": true,
+            "sticky_header": true,
+            "transparent_bg": true
+          },
+          "disabled": null
+        },
+        "footer": {
+          "type": "footer",
+          "blocks": {
+            "menu_720587": {
+              "type": "menu",
+              "settings": {
+                "heading": "Quick links",
+                "menu": "main-menu",
+                "menu_align": "left"
+              },
+              "disabled": null
+            },
+            "menu_720586": {
+              "type": "menu",
+              "settings": {
+                "heading": "Colections",
+                "menu": "collections",
+                "menu_align": "left"
+              },
+              "disabled": null
+            },
+            "menu_720585": {
+              "type": "menu",
+              "settings": {
+                "heading": "Products",
+                "menu": "products",
+                "menu_align": "left"
+              },
+              "disabled": null
+            }
+          },
+          "block_order": [
+            "menu_720587",
+            "menu_720586",
+            "menu_720585"
+          ],
+          "settings": {
+            "bottom_menu": "bottom-menu",
+            "bottom_text": "{{ \"now\" | date: \"%Y\" }} {{ shop.name }}. All right reserved.",
+            "color_scheme": "set-5",
+            "custom_title": "{{ shop.name }}",
+            "full_width": true,
+            "logo": "booqable://assets/image-store-logo-white.png",
+            "padding_top": "medium",
+            "padding_bottom_mobile": "small",
+            "padding_bottom": "small",
+            "padding_top_mobile": "small",
+            "rounded_corners": "none"
+          },
+          "disabled": null
+        }
+      },
+      "social_size": "lg",
+      "social_spacing": "md",
+      "tagline_font": "darker-grotesque",
+      "tagline_size": 20,
+      "use_focal_images": true
+    },
     "cruise": {
       "animation_duration": 0.2,
       "body_font": "poppins",
