--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3916,7 +3916,8 @@
             "padding_bottom_mobile": "small",
             "padding_top": "medium",
             "padding_top_mobile": "small",
-            "rounded_corners": "none"
+            "rounded_corners": "none",
+            "show_payments": true
           },
           "disabled": null
         }
